Completed Dice Roll

--- a/About.html
+++ b/About.html
@@ -5,11 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/DiceRoll/dice-webpage.css">
-    <link rel="stylesheet" href="/DiceRoll/dice.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>GAME TOOLS</title>
 </head>
 
@@ -55,44 +53,9 @@
             </div>
         </nav>
         <div class="main-container">
-
-            <div class="main-container-dice">
-
-                <div class="game-titlebox">
-                    DICE ROLL
-                </div>
-                <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Choose No. of Dices
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="/DiceRoll/dice.html">One Dice Roll</a>
-                        <a class="dropdown-item" href="/DiceRoll/dice2.html">Two Dice Roll</a>
-                    </div>
-                </div>
-                <div class="dice-container">
-                    <button class="dice-btn" onclick="rollDice()">
-                        <div class="dice">
-                            <div class="dice-circles dice-circle1"></div>
-                            <div class="dice-circles dice-circle2"></div>
-                            <div class="dice-circles dice-circle3"></div>
-                            <div class="dice-circles dice-circle4"></div>
-                            <div class="dice-circles dice-circle5"></div>
-                            <div class="dice-circles dice-circle6"></div>
-                            <div class="dice-circles dice-circle7"></div>
-                            <div class="dice-circles dice-circle8"></div>
-                            <div class="dice-circles dice-circle9"></div>
-                        </div>
-                    </button>
-                    <div id="output-textbox1" class="output-textbox">
-                        #
-                    </div>
-                    <script src="/DiceRoll/dice.js"></script>
-                </div>
-            </div>
         </div>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
@@ -102,7 +65,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-
 </body>
 
 </html>
