--- a/DiceRoll/dice2.html
+++ b/DiceRoll/dice2.html
@@ -71,24 +71,48 @@
                         <a class="dropdown-item" href="/DiceRoll/dice2.html">Two Dice Roll</a>
                     </div>
                 </div>
+                <div class="dices-container" onclick="rollDice()">
                 <div class="dice-container">
-                    <button class="dice-btn" onclick="rollDice()">
+                    
+                    <button class="dice-btn" >
                         <div class="dice">
-                            <div class="dice-circles dice-circle1"></div>
-                            <div class="dice-circles dice-circle2"></div>
-                            <div class="dice-circles dice-circle3"></div>
-                            <div class="dice-circles dice-circle4"></div>
-                            <div class="dice-circles dice-circle5"></div>
-                            <div class="dice-circles dice-circle6"></div>
-                            <div class="dice-circles dice-circle7"></div>
-                            <div class="dice-circles dice-circle8"></div>
-                            <div class="dice-circles dice-circle9"></div>
+                            <div class="dice-circles1 dice-circle11"></div>
+                            <div class="dice-circles1 dice-circle12"></div>
+                            <div class="dice-circles1 dice-circle13"></div>
+                            <div class="dice-circles1 dice-circle14"></div>
+                            <div class="dice-circles1 dice-circle15"></div>
+                            <div class="dice-circles1 dice-circle16"></div>
+                            <div class="dice-circles1 dice-circle17"></div>
+                            <div class="dice-circles1 dice-circle18"></div>
+                            <div class="dice-circles1 dice-circle19"></div>
                         </div>
                     </button>
                     <div id="output-textbox1" class="output-textbox">
                         #
                     </div>
-                    <script src="/DiceRoll/dice.js"></script>
+                    </div>
+                    <div class="dice-container">
+                    <button class="dice-btn" onclick="rollDice()">
+                        <div class="dice">
+                            <div class="dice-circles2 dice-circle21"></div>
+                            <div class="dice-circles2 dice-circle22"></div>
+                            <div class="dice-circles2 dice-circle23"></div>
+                            <div class="dice-circles2 dice-circle24"></div>
+                            <div class="dice-circles2 dice-circle25"></div>
+                            <div class="dice-circles2 dice-circle26"></div>
+                            <div class="dice-circles2 dice-circle27"></div>
+                            <div class="dice-circles2 dice-circle28"></div>
+                            <div class="dice-circles2 dice-circle29"></div>
+                        </div>
+                    </button>
+                    <div id="output-textbox2" class="output-textbox">
+                        #
+                    </div>
+                    </div>
+                    <script src="/DiceRoll/dice2.js"></script>
+                </div>
+                <div id="output-textbox3" class="output-textbox">
+                    #
                 </div>
             </div>
         </div>
