Fixed Root directory issue v1.0

--- a/DiceRoll/dice2.html
+++ b/DiceRoll/dice2.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/DiceRoll/dice-webpage.css">
-    <link rel="stylesheet" href="/DiceRoll/dice.css">
+    <link rel="stylesheet" href="https://darpan-exe.github.io/GameTools/DiceRoll/dice-webpage.css">
+    <link rel="stylesheet" href="https://darpan-exe.github.io/GameTools/DiceRoll/dice.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://darpan-exe.github.io/GameTools/style.css">
     <title>GAME TOOLS</title>
 </head>
 
 <body>
     <div class="background">
         <!-- <img src="/res/gtbg.png" alt=""> -->
-        <div class="web-logo"> <a href="/index.html">GAME &nbsp T<img src="/res/1200px-2-Dice-Icon.svg.png" alt=""
+        <div class="web-logo"> <a href="https://darpan-exe.github.io/GameTools/index.html">GAME &nbsp T<img src="https://darpan-exe.github.io/GameTools/res/1200px-2-Dice-Icon.svg.png" alt=""
                     style="height: 1.3em; transform: rotate(90deg); margin: 4px 5px;">LLS</a></div>
 
         <nav class="navbar navbar-expand-lg navbar-dark " style=" color: white;">
             <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-            <div class="web-logo"><a href="/index.html">GAME &nbsp T<img src="/res/1200px-2-Dice-Icon.svg.png"
+            <div class="web-logo"><a href="https://darpan-exe.github.io/GameTools/index.html">GAME &nbsp T<img src="https://darpan-exe.github.io/GameTools/res/1200px-2-Dice-Icon.svg.png"
                     alt="" style="height: 1.3em; transform: rotate(90deg); margin: 4px 5px;">LLS</a></div>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/index.html">HOME <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="https://darpan-exe.github.io/GameTools/index.html">HOME <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -40,14 +40,14 @@
                             TOOLS
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="/DiceRoll/dice.html">DICE ROLL</a>
-                            <a class="dropdown-item" href="/SpinTheBottle/spin.html">SPIN THE BOTTLE</a>
+                            <a class="dropdown-item" href="https://darpan-exe.github.io/GameTools/DiceRoll/dice.html">DICE ROLL</a>
+                            <a class="dropdown-item" href="https://darpan-exe.github.io/GameTools/SpinTheBottle/spin.html">SPIN THE BOTTLE</a>
                             <!-- <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Something else here</a> -->
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/About.html">ABOUT US</a>
+                        <a class="nav-link" href="https://darpan-exe.github.io/GameTools/About.html">ABOUT US</a>
                     </li>
                     <li class="nav-item" style="display: none;">
                         <a class="nav-link disabled" href="#">Disabled</a>
@@ -67,8 +67,8 @@
                         Choose No. of Dices
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="/DiceRoll/dice.html">One Dice Roll</a>
-                        <a class="dropdown-item" href="/DiceRoll/dice2.html">Two Dice Roll</a>
+                        <a class="dropdown-item" href="https://darpan-exe.github.io/GameTools/DiceRoll/dice.html">One Dice Roll</a>
+                        <a class="dropdown-item" href="https://darpan-exe.github.io/GameTools/DiceRoll/dice2.html">Two Dice Roll</a>
                     </div>
                 </div>
                 <div class="dices-container" onclick="rollDice()">
@@ -109,7 +109,7 @@
                         #
                     </div>
                     </div>
-                    <script src="/DiceRoll/dice2.js"></script>
+                    <script src="https://darpan-exe.github.io/GameTools/DiceRoll/dice2.js"></script>
                 </div>
                 <div id="output-textbox3" class="output-textbox">
                     #
