--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://darpan-exe.github.io/GameTools/style.css">
     <title>GAME TOOLS</title>
 </head>
 <body>
     <div class="background">
         <!-- <img src="/res/gtbg.png" alt=""> -->
-       <div class="web-logo"> <a href="/index.html">GAME &nbsp T<img src="/res/1200px-2-Dice-Icon.svg.png" alt="" style="height: 1.3em; transform: rotate(90deg); margin: 4px 5px;">LLS</a></div>
+       <div class="web-logo"> <a href="https://darpan-exe.github.io/GameTools/index.html">GAME &nbsp T<img src="https://darpan-exe.github.io/GameTools/res/1200px-2-Dice-Icon.svg.png" alt="" style="height: 1.3em; transform: rotate(90deg); margin: 4px 5px;">LLS</a></div>
         
         <nav class="navbar navbar-expand-lg navbar-dark " style=" color: white;">
             <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-            <div class="web-logo"><a href="/index.html">GAME &nbsp T<img src="/res/1200px-2-Dice-Icon.svg.png" alt="" style="height: 1.3em; transform: rotate(90deg); margin: 4px 5px;">LLS</a></div>
+            <div class="web-logo"><a href="https://darpan-exe.github.io/GameTools/index.html">GAME &nbsp T<img src="https://darpan-exe.github.io/GameTools/res/1200px-2-Dice-Icon.svg.png" alt="" style="height: 1.3em; transform: rotate(90deg); margin: 4px 5px;">LLS</a></div>
             
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -24,21 +24,21 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="/index.html">HOME <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="https://darpan-exe.github.io/GameTools/index.html">HOME <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         TOOLS
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/DiceRoll/dice.html">DICE ROLL</a>
-                        <a class="dropdown-item" href="/SpinTheBottle/spin.html">SPIN THE BOTTLE</a>
+                        <a class="dropdown-item" href="https://darpan-exe.github.io/GameTools/DiceRoll/dice.html">DICE ROLL</a>
+                        <a class="dropdown-item" href="https://darpan-exe.github.io/GameTools/SpinTheBottle/spin.html">SPIN THE BOTTLE</a>
                         <!-- <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Something else here</a> -->
                     </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/About.html">ABOUT US</a>
+                  <a class="nav-link" href="https://darpan-exe.github.io/GameTools/About.html">ABOUT US</a>
                 </li>
                 <li class="nav-item" style="display: none;">
                   <a class="nav-link disabled" href="#">Disabled</a>
@@ -46,8 +46,8 @@
             </div>
           </nav>
           <div class="main-container">
-              <a href="/DiceRoll/dice.html"><div class="card-item">
-                  <img src="/res/1200px-2-Dice-Icon.svg.png" alt="">
+              <a href="https://darpan-exe.github.io/GameTools/DiceRoll/dice.html"><div class="card-item">
+                  <img src="https://darpan-exe.github.io/GameTools//res/1200px-2-Dice-Icon.svg.png" alt="">
                   <div class="card-title">DICE ROLL</div>
               </div>
             </a>
