Fixed 2 DICE FLEX PROBLEM

--- a/DiceRoll/dice2.html
+++ b/DiceRoll/dice2.html
@@ -75,7 +75,7 @@
                 <div class="dice-container">
                     
                     <button class="dice-btn" >
-                        <div class="dice">
+                        <div class="dice mult_dice">
                             <div class="dice-circles1 dice-circle11"></div>
                             <div class="dice-circles1 dice-circle12"></div>
                             <div class="dice-circles1 dice-circle13"></div>
@@ -93,7 +93,7 @@
                     </div>
                     <div class="dice-container">
                     <button class="dice-btn" onclick="rollDice()">
-                        <div class="dice">
+                        <div class="dice mult_dice">
                             <div class="dice-circles2 dice-circle21"></div>
                             <div class="dice-circles2 dice-circle22"></div>
                             <div class="dice-circles2 dice-circle23"></div>
