Added Spin the bottle feature

--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
           <div class="card-title">DICE ROLL</div>
         </div>
       </a>
+      <a href="https://darpan-exe.github.io/GameTools/SpinTheBottle/spin.html">
+        <div class="card-item">
+          <img src="https://darpan-exe.github.io/GameTools/res/gtspinbottle.png" alt="">
+          <div class="card-title">SPIN THE<br>BOTTLE</div>
+        </div>
+      </a>
     </div>
   </div>
 
