--- a/SpinTheBottle/spin.html
+++ b/SpinTheBottle/spin.html
@@ -62,7 +62,7 @@
             </div>
         </div>
     </div>
-    <script src="/SpinTheBottle/spin.js"></script>
+    <script src="https://darpan-exe.github.io/GameTools/SpinTheBottle/spin.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
