--- a/SpinTheBottle/spin.html
+++ b/SpinTheBottle/spin.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://darpan-exe.github.io/GameTools/style.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>GAME TOOLS</title>
 </head>
@@ -15,12 +15,12 @@
 <body>
     <div class="background">
         <!-- <img src="/res/gtbg.png" alt=""> -->
-        <div class="web-logo"> <a href="https://darpan-exe.github.io/GameTools/index.html">GAME &nbsp T<img src="https://darpan-exe.github.io/GameTools/res/1200px-2-Dice-Icon.svg.png" alt=""
+        <div class="web-logo"> <a href="../index.html">GAME &nbsp T<img src="../res/1200px-2-Dice-Icon.svg.png" alt=""
                     style="height: 1.3em; transform: rotate(90deg); margin: 4px 5px;">LLS</a></div>
 
         <nav class="navbar navbar-expand-lg navbar-dark " style=" color: white;">
             <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-            <div class="web-logo"><a href="https://darpan-exe.github.io/GameTools/index.html">GAME &nbsp T<img src="https://darpan-exe.github.io/GameTools/res/1200px-2-Dice-Icon.svg.png"
+            <div class="web-logo"><a href="../index.html">GAME &nbsp T<img src="../res/1200px-2-Dice-Icon.svg.png"
                     alt="" style="height: 1.3em; transform: rotate(90deg); margin: 4px 5px;">LLS</a></div>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="https://darpan-exe.github.io/GameTools/index.html">HOME <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="../index.html">HOME <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -39,14 +39,14 @@
                             TOOLS
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="https://darpan-exe.github.io/GameTools/DiceRoll/dice.html">DICE ROLL</a>
-                            <a class="dropdown-item" href="https://darpan-exe.github.io/GameTools/SpinTheBottle/spin.html">SPIN THE BOTTLE</a>
+                            <a class="dropdown-item" href="../DiceRoll/dice.html">DICE ROLL</a>
+                            <a class="dropdown-item" href="../SpinTheBottle/spin.html">SPIN THE BOTTLE</a>
                             <!-- <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Something else here</a> -->
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://darpan-exe.github.io/GameTools/About.html">ABOUT US</a>
+                        <a class="nav-link" href="../About.html">ABOUT US</a>
                     </li>
                     <li class="nav-item" style="display: none;">
                         <a class="nav-link disabled" href="#">Disabled</a>
@@ -56,13 +56,13 @@
         <div class="main-container" onclick="rotate()">
             <div class="spin-container">
                 <div class="spin-table" >
-                    <img src="https://darpan-exe.github.io/GameTools/res/gtspinbottle.png" alt="" id="bottle" >
+                    <img src="../res/gtspinbottle.png" alt="" id="bottle" >
                   
                 </div>
             </div>
         </div>
     </div>
-    <script src="https://darpan-exe.github.io/GameTools/SpinTheBottle/spin.js"></script>
+    <script src="../SpinTheBottle/spin.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
